[package]
name = "fallout-classic-rewritten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "deps/common",
    "deps/acm",
    "deps/mve",
    "deps/dat",
    "deps/pal",
    "deps/frm",

    "tools/read-dat",
    "tools/read-pal",
    "tools/read-file",
]

[features]
tools = []

[[bin]]
name = "fallout-classic-rewritten"
path = "src/main.rs"

[dependencies]
acm = { path = "./deps/acm" }
mve = { path = "./deps/mve" }

[profile.release-with-debug]
inherits = "release"
debug = true
