[package]
name = "read-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../deps/common" }
pal = { path = "../../deps/pal" }
frm = { path = "../../deps/frm" }
acm = { path = "../../deps/acm" }
mve = { path = "../../deps/mve" }


clap = { version = "3.2.20", features = ["derive"] }
lodepng = "3.7.0"
